Details
-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
4.7.4
-
None
-
All
-
I2c3ff2fa45221f1cf4af8e4323c383c998adb650
Description
In the Menus example a status tip is set for wrong action. The status tip of the setParagraphSpacingAct is set for set ParagraphSpacingAct.
The following change would fix the issue:
--- a/examples/mainwindows/menus/mainwindow.cpp +++ b/examples/mainwindows/menus/mainwindow.cpp @@ -276,7 +276,7 @@ void MainWindow::createActions() connect(setLineSpacingAct, SIGNAL(triggered()), this, SLOT(setLineSpacing())); setParagraphSpacingAct = new QAction(tr("Set &Paragraph Spacing..."), this); - setLineSpacingAct->setStatusTip(tr("Change the gap between paragraphs")); + setParagraphSpacingAct->setStatusTip(tr("Change the gap between paragraphs")); connect(setParagraphSpacingAct, SIGNAL(triggered()), this, SLOT(setParagraphSpacing()));
Attachments
For Gerrit Dashboard: QTBUG-22736 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
31369,1 | Correct status tips for Menus example. | master | qt/qtbase | Status: MERGED | +2 | 0 |