Correct status tips for Menus example.

Line spacing's status tip is incorrectly set to paragraph spacing's,
and paragraph spacing's status tip is not set at all.

Task-number: QTBUG-22736
Change-Id: I2c3ff2fa45221f1cf4af8e4323c383c998adb650
Reviewed-by: Jerome Pasion <jerome.pasion@nokia.com>
Reviewed-by: Michalina Ziemba <michalina.ziemba@nokia.com>